--- a/Gerenciador/src/main/webapp/pages/footer.xhtml
+++ b/Gerenciador/src/main/webapp/pages/footer.xhtml
@@ -6,18 +6,19 @@
 	xmlns:p="http://primefaces.org/ui">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" type="text/css" href="/resources/css/default.css" />
 </head>
 <ui:composition>
 	<h:body>
-		<div style="text-align: center">
-			<p:outputLabel value="Panylanches Novolândia"
-				styleClass="footer_font" />
-		</div>
-		<div style="text-align: center">
-			<p:outputLabel
-				value="Praça Milton de Almeida, 10, Novolândia, Teolândia - BA"
-				style="color: black; font-family: 'Georgia'" />
+		<div>
+			<div style="text-align: center">
+				<p:outputLabel value="Panylanches Novolândia"
+					style="color: black; font-family: 'Georgia'" />
+			</div>
+			<div style="text-align: center">
+				<p:outputLabel
+					value="Praça Milton de Almeida, 10, Novolândia, Teolândia - BA"
+					style="color: black; font-family: 'Georgia'" />
+			</div>
 		</div>
 	</h:body>
 </ui:composition>
