--- a/Gerenciador/src/main/webapp/template.xhtml
+++ b/Gerenciador/src/main/webapp/template.xhtml
@@ -11,7 +11,7 @@
 <h:body>
 	<div id="top">
 		<ui:insert name="top">
-			<ui:include src="pages/cabecalho.xhtml"></ui:include>
+			<ui:include src="pages/menu.xhtml"></ui:include>
 		</ui:insert>		
 	</div>
 	
@@ -20,7 +20,7 @@
 		</ui:insert>
 	</div>
 	
-	<div>
+	<div style="position: fixed; left: 0; bottom: 0; width: 100%; text-align: center;">
 		<ui:insert name="footer">
 			<ui:include src="pages/footer.xhtml"></ui:include>
 		</ui:insert>
