Ajuste do template

--- a/Gerenciador/src/main/webapp/pages/footer.xhtml
+++ b/Gerenciador/src/main/webapp/pages/footer.xhtml
@@ -10,15 +10,8 @@
 <ui:composition>
 	<h:body>
 		<div>
-			<div style="text-align: center">
-				<p:outputLabel value="Panylanches Novolândia"
-					style="color: black; font-family: 'Georgia'" />
-			</div>
-			<div style="text-align: center">
-				<p:outputLabel
-					value="Praça Milton de Almeida, 10, Novolândia, Teolândia - BA"
-					style="color: black; font-family: 'Georgia'" />
-			</div>
+			<h:graphicImage value="#{resource['imagens:footer.png']}"
+				width="120%" style="align-items: center" />
 		</div>
 	</h:body>
 </ui:composition>
