--- a/Gerenciador/src/main/webapp/pages/menu.xhtml
+++ b/Gerenciador/src/main/webapp/pages/menu.xhtml
@@ -8,24 +8,25 @@
 <ui:composition>
 	<h:body>
 		<h:form>
-			<p:menubar style="backgroung-color: orange">
-				<p:submenu label="Caixa Diário">
-					<p:menuitem value="Inserir" url="pages/caixadiario.xhtml" />
-				</p:submenu>
-				<p:submenu label="Gerenciamento de Cheques">
-					<p:menuitem value="Inserir" />
-					<p:menuitem value="Pesquisar" />
-				</p:submenu>
-				<p:submenu label="Gerenciamento de Compras">
-					<p:menuitem value="Inserir" />
-					<p:menuitem value="Editar" />
-				</p:submenu>
-				<p:submenu label="Gerenciamento de Gastos">
-					<p:menuitem value="Inserir" />
-					<p:menuitem value="Consultar" />
-				</p:submenu>
-			</p:menubar>
-
+			<div>
+				<p:menubar style="background-color: orange">
+					<p:submenu label="Caixa Diário">
+						<p:menuitem value="Inserir" url="#{request.contextPath}/pages/caixa_diario.xhtml" />
+					</p:submenu>
+					<p:submenu label="Gerenciamento de Cheques">
+						<p:menuitem value="Inserir" url="#{request.contextPath}/pages/controle_cheques.xhtml" />
+						<p:menuitem value="Pesquisar" />
+					</p:submenu>
+					<p:submenu label="Gerenciamento de Compras">
+						<p:menuitem value="Inserir" url="#{request.contextPath}/pages/controle_compras.xhtml" />
+						<p:menuitem value="Editar" />
+					</p:submenu>
+					<p:submenu label="Gerenciamento de Gastos">
+						<p:menuitem value="Inserir" url="#{request.contextPath}/pages/controle_gastos.xhtml" />
+						<p:menuitem value="Consultar" />
+					</p:submenu>
+				</p:menubar>
+			</div>
 		</h:form>
 	</h:body>
 </ui:composition>
