--- a/Gerenciador/src/main/webapp/pages/template.xhtml
+++ b/Gerenciador/src/main/webapp/pages/template.xhtml
@@ -7,11 +7,12 @@
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 	<title>Gerenciador Panylanches</title>
+	<link rel="sortcut icon" href="../resources/imagens/logo_aba.png"/>
 </h:head>
 <h:body>
 	<div id="logo">
 		<ui:insert name="logo">
-			<h:commandLink action="#{request.contextPath}" >
+			<h:commandLink>
 				<h:graphicImage library="imagens" name="logo.PNG" />
 			</h:commandLink>
 		</ui:insert>
