--- a/Gerenciador/src/main/webapp/pages/index.xhtml
+++ b/Gerenciador/src/main/webapp/pages/index.xhtml
@@ -1,9 +1,10 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" template="template.xhtml">
-	
-	
+	xmlns:f="http://xmlns.jcp.org/jsf/core" template="template.xhtml">
+
+
 </ui:composition>
