--- a/Gerenciador/src/main/webapp/pages/footer.xhtml
+++ b/Gerenciador/src/main/webapp/pages/footer.xhtml
@@ -10,8 +10,8 @@
 <ui:composition>
 	<h:body>
 		<div>
-			<h:graphicImage value="#{resource['imagens:footer.png']}"
-				width="120%" style="align-items: center" />
+			<h:graphicImage value="#{resource['imagens:footer2.PNG']}"
+				width="115%" style="align-items: center" />
 		</div>
 	</h:body>
 </ui:composition>
