--- a/Gerenciador/src/main/webapp/pages/menu.xhtml
+++ b/Gerenciador/src/main/webapp/pages/menu.xhtml
@@ -10,8 +10,9 @@
 		<h:form>
 			<div>
 				<p:menubar style="background-color: orange">
-					<p:submenu label="Caixa Diário">
-						<p:menuitem value="Inserir" url="#{request.contextPath}/pages/caixa_diario.xhtml" />
+					<p:submenu label="Caixa">
+						<p:menuitem value="Diário" url="#{request.contextPath}/pages/caixa_diario.xhtml" />
+						<p:menuitem value="Mensal" url="#{request.contextPath}/pages/caixa_mensal.xhtml" />
 					</p:submenu>
 					<p:submenu label="Gerenciamento de Cheques">
 						<p:menuitem value="Inserir" url="#{request.contextPath}/pages/controle_cheques.xhtml" />
