--- a/Gerenciador/src/main/webapp/pages/template.xhtml
+++ b/Gerenciador/src/main/webapp/pages/template.xhtml
@@ -28,12 +28,12 @@
 		</ui:insert>
 	</div>
 
-	<div
+	<!-- <div
 		style="position: fixed; left: 0; bottom: 0; width: 90%; text-align: center; border-bottom: inherit;">
 		<ui:insert name="footer">
 			<ui:include src="footer.xhtml"></ui:include>
 		</ui:insert>
 	</div>
-
+ -->
 </h:body>
 </html>
