--- a/Gerenciador/src/main/webapp/pages/menu.xhtml
+++ b/Gerenciador/src/main/webapp/pages/menu.xhtml
@@ -11,19 +11,25 @@
 			<div>
 				<p:menubar style="background-color: orange">
 					<p:submenu label="Caixa">
-						<p:menuitem value="Diário" url="#{request.contextPath}/pages/caixa_diario.xhtml" />
-						<p:menuitem value="Mensal" url="#{request.contextPath}/pages/caixa_mensal.xhtml" />
+						<p:menuitem value="Diário"
+							url="#{request.contextPath}/pages/caixa_diario.xhtml" />
+						<p:menuitem value="Mensal"
+							url="#{request.contextPath}/pages/caixa_mensal.xhtml" />
 					</p:submenu>
 					<p:submenu label="Gerenciamento de Cheques">
-						<p:menuitem value="Inserir" url="#{request.contextPath}/pages/controle_cheques.xhtml" />
-						<p:menuitem value="Pesquisar" />
+						<p:menuitem value="Inserir"
+							url="#{request.contextPath}/pages/controle_cheques_inserir.xhtml" />
+						<p:menuitem value="Pesquisar"
+							url="#{request.contextPath}/pages/controle_cheques_pesquisar.xhtml" />
 					</p:submenu>
 					<p:submenu label="Gerenciamento de Compras">
-						<p:menuitem value="Inserir" url="#{request.contextPath}/pages/controle_compras.xhtml" />
+						<p:menuitem value="Inserir"
+							url="#{request.contextPath}/pages/controle_compras.xhtml" />
 						<p:menuitem value="Editar" />
 					</p:submenu>
 					<p:submenu label="Gerenciamento de Gastos">
-						<p:menuitem value="Inserir" url="#{request.contextPath}/pages/controle_gastos.xhtml" />
+						<p:menuitem value="Inserir"
+							url="#{request.contextPath}/pages/controle_gastos.xhtml" />
 						<p:menuitem value="Consultar" />
 					</p:submenu>
 				</p:menubar>
