--- a/Gerenciador/src/main/webapp/pages/caixa_mensal.xhtml
+++ b/Gerenciador/src/main/webapp/pages/caixa_mensal.xhtml
@@ -14,23 +14,24 @@
 
 				<h:panelGrid columns="2">
 					<p:outputLabel value="Meses: " />
-					<p:selectCheckboxMenu id="listaMeses" label="Mês(es)" filter="true"
-						value="#{caixaMensalControler.mesesSelecionados}">
-						<f:selectItems value="#{caixaMensalControler.listaMeses}" />
+					<p:selectCheckboxMenu id="listaMeses" label="Meses" filter="true" multiple="true"
+						value="#{caixaMensalController.mesesSelecionados}">
+						<f:selectItems value="#{caixaMensalController.listaMeses}" />
 					</p:selectCheckboxMenu>
 				</h:panelGrid>
 
 				<h:panelGrid>
 					<p:commandButton value="Pesquisar"
-						action="#{caixaMensalControler.pesquisar}" />
+						action="#{caixaMensalController.pesquisar}" ajax="false" />
 				</h:panelGrid>
 
 			</h:panelGrid>
 
+			<p:messages showIcon="true" closable="true" showDetail="true" />
 
-			<h:panelGrid width="30%" cellpadding="10" cellspacing="10">
+			<h:panelGrid width="50%" cellpadding="10" cellspacing="10">
 				<p:dataTable id="tabelaAnual" var="mes"
-					value="#{caixaMensalControler.meses}">
+					value="#{caixaMensalController.meses}">
 
 					<f:facet name="header">
 						<h:outputText value="Resumo anual" />
@@ -51,14 +52,9 @@
 				</p:dataTable>
 			</h:panelGrid>
 
-			<!-- <h:panelGrid width="60%">
-				<p:chart type="line" id="grafico" rendered="true"
-					model="#{caixaMensalControler.graficoDiario}" />
-			</h:panelGrid> -->
-			
 			<h:panelGrid width="50%">
 				<p:chart type="bar" id="graficoBar" rendered="true"
-					model="#{caixaMensalControler.graficoBarra}" />
+					model="#{caixaMensalController.graficoBarra}" />
 			</h:panelGrid>
 
 		</h:form>
