--- a/Gerenciador/src/main/webapp/pages/controle_cheques_pesquisar.xhtml
+++ b/Gerenciador/src/main/webapp/pages/controle_cheques_pesquisar.xhtml
@@ -10,7 +10,15 @@
 	<ui:define name="content">
 		<h:form>
 
-			<h1>Controle de Cheques</h1>
+			<h:panelGrid>
+
+				<p:selectOneRadio>
+					<f:selectItem itemLabel="Data Pagamento" itemValue="1" />
+					<f:selectItem itemLabel="Data Emissão" itemValue="2" />
+				</p:selectOneRadio>
+
+				<p:datePicker showIcon="true" pattern="dd/MM/yyyy" />
+			</h:panelGrid>
 
 		</h:form>
 	</ui:define>
