--- a/Gerenciador/src/main/webapp/pages/footer.xhtml
+++ b/Gerenciador/src/main/webapp/pages/footer.xhtml
@@ -9,10 +9,12 @@
 </head>
 <ui:composition>
 	<h:body>
-		<div>
-			<h:graphicImage value="#{resource['imagens:footer2.PNG']}"
-				width="115%" style="align-items: center" />
-		</div>
+		<h:form>
+			<div>
+				<p:menubar style="background-color: orange" >
+				</p:menubar>
+			</div>
+		</h:form>
 	</h:body>
 </ui:composition>
 </html>
