--- a/Gerenciador/src/main/webapp/pages/template.xhtml
+++ b/Gerenciador/src/main/webapp/pages/template.xhtml
@@ -7,13 +7,14 @@
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 	<title>Gerenciador Panylanches</title>
-	<link rel="sortcut icon" href="../resources/imagens/logo_aba.png"/>
+	<link rel="sortcut icon" href="../resources/imagens/logo_aba.png" />
 </h:head>
 <h:body>
 	<div id="logo">
 		<ui:insert name="logo">
 			<h:commandLink>
-				<h:graphicImage library="imagens" name="logo.PNG" />
+				<h:graphicImage library="imagens" name="logo_camisa.PNG" width="405"
+					height="145" />
 			</h:commandLink>
 		</ui:insert>
 	</div>
@@ -28,12 +29,12 @@
 		</ui:insert>
 	</div>
 
-	<!-- <div
-		style="position: fixed; left: 0; bottom: 0; width: 90%; text-align: center; border-bottom: inherit;">
+	<div
+		style="position: fixed; left: 0; bottom: 0; width: 100%; text-align: center; border-bottom: inherit;">
 		<ui:insert name="footer">
 			<ui:include src="footer.xhtml"></ui:include>
 		</ui:insert>
 	</div>
- -->
+
 </h:body>
 </html>
