Importação das planilhas

--- a/Gerenciador/src/main/webapp/pages/controle_cheques_pesquisar.xhtml
+++ b/Gerenciador/src/main/webapp/pages/controle_cheques_pesquisar.xhtml
@@ -14,7 +14,7 @@
 
 				<h:panelGrid>
 					<p:outputLabel value="Pesquisar Por:" />
-					<p:selectOneMenu id="tipoPesquisa" onchange="submit()"
+					<p:selectOneMenu id="tipoPesquisa"
 						value="#{controleChequesPesquisarController.opcaoSelecionada}">
 						<f:selectItems
 							value="#{controleChequesPesquisarController.listaOpcoes}" />
@@ -29,14 +29,60 @@
 
 				<h:panelGrid>
 					<p:outputLabel value="De:" />
-					<p:calendar pattern="dd/MM/yyyy" id="de" />
+					<p:calendar pattern="dd/MM/yyyy" id="de"
+						value="#{controleChequesPesquisarController.dataDe}" />
 				</h:panelGrid>
 				<h:panelGrid>
 					<p:outputLabel value=" Até:" />
-					<p:calendar pattern="dd/MM/yyyy" id="ate" />
+					<p:calendar pattern="dd/MM/yyyy" id="ate"
+						value="#{controleChequesPesquisarController.dataAte}" />
+				</h:panelGrid>
+				<h:panelGrid>
+					<p:commandButton value="Pesquisar" />
 				</h:panelGrid>
 
 
+			</h:panelGrid>
+
+			<h:panelGrid>
+				<p:dataTable value="" id="tabela" rows="15" var="cheque"
+					paginator="true" paginatorPosition="bottom">
+					<f:facet name="header">
+						Cheques
+					</f:facet>
+
+					<p:column headerText="Número" width="10%">
+						<h:outputText />
+					</p:column>
+
+					<p:column headerText="Beneficiário" width="20%">
+						<h:outputText />
+					</p:column>
+
+					<p:column headerText="Valor"  width="15%">
+						<h:outputText value="R$" />
+						<h:outputText style="text-align: right;">
+							<f:convertNumber pattern="#,##0.00" />
+						</h:outputText>
+					</p:column>
+
+					<p:column headerText="Data Emissão" width="15%">
+						<h:outputText>
+							<f:convertDateTime pattern="dd/MM/yyyy" />
+						</h:outputText>
+					</p:column>
+
+					<p:column headerText="Data Pagamento" width="15%">
+						<h:outputText>
+							<f:convertDateTime pattern="dd/MM/yyyy" />
+						</h:outputText>
+					</p:column>
+
+					<p:column headerText="Observação" width="25%">
+						<h:outputText />
+					</p:column>
+
+				</p:dataTable>
 			</h:panelGrid>
 
 		</h:form>
