--- a/Gerenciador/src/main/webapp/pages/menu.xhtml
+++ b/Gerenciador/src/main/webapp/pages/menu.xhtml
@@ -32,6 +32,10 @@
 							url="#{request.contextPath}/pages/controle_gastos.xhtml" />
 						<p:menuitem value="Consultar" />
 					</p:submenu>
+					<p:submenu label="Dados">
+						<p:menuitem value="Importar"
+							url="#{request.contextPath}/pages/importar_dados.xhtml" />
+					</p:submenu>
 				</p:menubar>
 			</div>
 		</h:form>
